# mapepire-protocol

./: .gitignore  LICENSE  PROTOCOL.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yaml  test.yaml
python-test/: .env.example  README.md  client.py  pyproject.toml
python-test/tests/: test_codegen.py  test_json_schema_validation.py  test_pydantic_models.py
scripts/: generate-schemas.ts
src/: base.ts  enums.ts  index.ts
src/__tests__/: discriminated-union.test.ts  json-schema.test.ts  requests.test.ts  responses.test.ts  round-trip.test.ts
src/requests/: cl.ts  connect.ts  dove.ts  execute.ts  exit.ts  get-db-job.ts  get-trace-data.ts  get-version.ts  index.ts  ping.ts  prepare-sql-execute.ts  prepare-sql.ts  set-config.ts  sql-close.ts  sql-more.ts  sql.ts
src/responses/: connect.ts  dove.ts  errors.ts  exit.ts  get-db-job.ts  get-trace-data.ts  get-version.ts  index.ts  ping.ts  prepare-sql.ts  query-result.ts  set-config.ts  sql-close.ts  sql-more.ts
src/shared/: index.ts  job-log.ts  metadata.ts  parameters.ts
